2005-03-06  Simos Xenitellis  <simos@gnome.org>

	* README_screenshots.txt: Added links to flash animation tutorial.

2004-03-05  Davyd Madeley  <davyd@madeley.id.au>

	* figures/figure-file-roller.png: Added missing figure.
	* rnutilities: Fix image link.

2005-03-03  Frank Arnold  <farnold@cvs.gnome.org>

	* rnsysadmin.xml: Fixed a typo.

2005-03-03  Murray Cumming  <murrayc@murrayc.com>

	* release-notes.xml: Fix the caption of the desktop screenshot - 
	it was copy/pasted from the control center.

2005-03-03  Murray Cumming  <murrayc@murrayc.com>

	* rncontrolcenter.xml: Fixed a typo. Sorry translators.

2005-03-03  Davyd Madeley  <davyd@madeley.id.au>

	* rnapplets.xml:
	* rnapplications.xml:
	* rnutilities.xml: Linked to new images. Some strings changed where
	the were obviously the wrong thing (due to cutting and pasting I
	imagine), this really couldn't be helped.
	
	* figures/figure-applet-cpufreq.png:
	* figures/figure-dictionary.png:
	* figures/figure-floppy-formatter.png:
	* figures/figure-gedit.png:
	* figures/figure-gnome-meeting.png: Added more images. Only one or two
	missing now.


2005-03-02  Murray Cumming  <murrayc@murrayc.com>

	* release-notes.xml: Add rnutilities.xml. I probably forgot to 
	do this before. Screenshots need to be done.
	* release-notes.xml: Remove TODO on known issues - it is too late now.
	* rnapplications.xml: Made the FIXME an xml comment instead of making 
	it part of a translatable string.

2005-03-02  Murray Cumming  <murrayc@murrayc.com>

	* Translation starts in earnest now, so please do not change the 
	English text unless absolutely necessary.

2005-03-02  Murray Cumming  <murrayc@murrayc.com>

	* rnapplets.xml: Correct the caption for the drive mount applet.

2005-03-02  Murray Cumming  <murrayc@murrayc.com>

	* Added README.txt, README_translators.txt, README_screenshots.txt.

2005-03-02  Davyd Madeley  <davyd@madeley.id.au>

	* release-notes.xml:
	* rnapplets.xml:
	* rnapplications.xml:
	* rncontrolcenter.xml: